--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ function positionSuccess(position)
 
 function positionError()
 {
-	navigator.notification.prompt('Failed to retrieve location', onPrompt,'Error');
+	alert('Failed to retrieve location');
 }
 
 </script>
